# iggy-example

./: .bazelrc  .gitignore  Cargo.toml  MODULE.bazel  README.md
queng_common/common_errors/src/: message_processing_error.rs
queng_common/common_ims/src/: integration_message_config.rs
queng_common/common_message/src/: ims_tcp_tls_config.rs  lib.rs
queng_common/common_message_bus/: Cargo.toml
queng_common/common_message_bus/src/: ims_data_config.rs  lib.rs  prelude.rs
queng_integration_data/data_integration_factory/: Cargo.toml
queng_integration_data/data_integration_factory/src/: lib.rs
queng_integration_data/sample_data_integration/: Cargo.toml
queng_integration_data/sample_data_integration/src/: lib.rs
queng_message/message_consumer/: Cargo.toml
queng_message/message_consumer/src/: getters.rs  lib.rs  shutdown.rs
queng_message/message_producer/: Cargo.toml
queng_message/message_producer/src/: getters.rs  lib.rs  produce.rs  shutdown.rs
queng_message/message_shared/: BUILD.bazel  Cargo.toml
queng_message/message_shared/src/: error.rs  lib.rs  traits.rs  utils.rs
queng_message/message_tests/: Cargo.toml
queng_message/message_tests/tests/: mod.rs
queng_message_bus/message_consumer/: Cargo.toml
queng_message_bus/message_consumer/src/: consume.rs  lib.rs
queng_message_bus/message_producer/: Cargo.toml
queng_message_bus/message_producer/src/: lib.rs  produce.rs  send.rs  utils.rs
queng_message_bus/message_shared/: Cargo.toml
queng_message_bus/message_shared/src/: lib.rs  utils.rs
queng_message_bus/message_tests/: Cargo.toml
queng_message_bus/message_tests/src/: fake_lib.rs
queng_message_bus/message_tests/tests/: mod.rs
queng_sbe/sbe_bindings/: Cargo.toml
queng_sbe/sbe_bindings/src/: client_error_codec.rs  client_login_codec.rs  client_logout_codec.rs  data_bar_codec.rs  data_error_codec.rs  first_data_bar_codec.rs  first_trade_bar_codec.rs  last_data_bar_codec.rs  last_trade_bar_codec.rs  lib.rs  message_header_codec.rs  start_data_msg_codec.rs  stop_all_data_msg_codec.rs  stop_data_msg_codec.rs  trade_bar_codec.rs
queng_sbe/sbe_messages/: Cargo.toml
queng_sbe/sbe_messages/src/: lib.rs
queng_sbe/sbe_messages/src/errors/: mod.rs
queng_sbe/sbe_messages/src/messages/: mod.rs
queng_sbe/sbe_messages/src/messages/client_login/: display.rs  getters.rs  mod.rs  sbe_decode.rs  sbe_encode.rs
queng_sbe/sbe_messages/src/messages/client_logout/: getters.rs  mod.rs  sbe_decode.rs  sbe_encode.rs
queng_sbe/sbe_messages/src/messages/error_client/: sbe_decode.rs  sbe_encode.rs
queng_sbe/sbe_messages/src/messages/error_data/: display.rs  getters.rs  sbe_decode.rs  sbe_encode.rs
queng_sbe/sbe_messages/src/types/: client_error_types.rs  data_error_types.rs  message_types.rs
queng_sbe/sbe_utils/: Cargo.toml
queng_sbe/sbe_utils/src/: error_utils.rs
queng_services/data/sample_data_service/: Cargo.toml
queng_services/data/sample_data_service/src/: config.rs  main.rs
queng_services/template/ims_data_service/: Cargo.toml
queng_services/template/ims_data_service/src/: lib.rs  run.rs  service.rs  shutdown.rs
queng_services/template/ims_data_service/src/handle/: handle_messages.rs  mod.rs
queng_services/template/ims_data_service/src/handle/client/: handle_client_login.rs  handle_client_logout.rs  handle_client_utils.rs  mod.rs
queng_services/template/ims_data_service/src/utils/: mod.rs  utils_config.rs  utils_send_error.rs
queng_traits/data_integration_traits/: Cargo.toml
queng_traits/data_integration_traits/src/: lib.rs
