[workspace]
resolver = "2"


members = [
    "queng_common/*",
    "queng_message/*",
]



[workspace.package]
edition = "2021"
rust-version = "1.82.0"
readme = "README.md"
repository = "https://github.com/marvin-hansen/quant-engine"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
license = "MIT"

# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = 'debuginfo'  # Automatically strip debug infos from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


[workspace.dependencies]
#
# ==============
# Internal Aliases
# ==============
#
# Common
common_message = { path = "queng_common/common_message" }

# Mesasge bus
message_consumer = { path = "queng_message/message_consumer" }
message_producer = { path = "queng_message/message_producer" }
message_shared = { path = "queng_message/message_shared" }

#
# ==============
# External crates
# ==============
#
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = {version = "1.0.93"}
bytes = {version = "1.8.0"}
futures-util = {version = "0.3.31"}
iggy = {version = "0.6.40"}
rand = {version = "0.8.5"}
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = {version = "1.0.133"}
trait-variant = {version = "0.1.2"}
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
