[package]
name = "sample_data_integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[lints]
workspace = true


[dependencies]
data_integration_traits = { workspace = true }