[package]
name = "message_consumer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
[dependencies]
# Internal crates
common_message = {workspace = true}
message_shared = {workspace = true}

# External crates
anyhow ={workspace = true}
bytes = { workspace = true }
futures-util = { workspace = true }
iggy = {workspace = true}
tokio = {workspace = true}
