[package]
name = "message_producer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
[dependencies]
# Internal crates
common_message = {workspace = true}
message_shared = {workspace = true}

# External crates
ahash = {workspace = true}
anyhow ={workspace = true}
bytes = { workspace = true }
iggy = {workspace = true}
tokio = {workspace = true}
log = "0.4.21"
