[package]
name = "message_consumer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
common_message_bus = {workspace = true}
message_shared = {workspace = true}

# External crates
iggy = {workspace = true}
tokio = {workspace = true}
anyhow ={workspace = true}
bytes = { workspace = true }