[package]
name = "message_shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
common_message_bus = {workspace = true}
# External crates
ahash = {workspace = true}
iggy = {workspace = true}