[package]
name = "message_tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "consumer"
path = "src/bin/consumer/main.rs"

[[bin]]
name = "producer"
path = "src/bin/producer/main.rs"

# For testing
[dependencies]
# Internal crates
message_producer = { workspace = true }
message_consumer = { workspace = true }
common_message_bus = {workspace = true}
message_shared = {workspace = true}

# External crates
iggy = { workspace = true }
tokio = { workspace = true }