[package]
name = "sbe_messages"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
sbe_bindings = { workspace = true }
# External crates
rust_decimal = { workspace = true }
chrono = { workspace = true }